tests/typing/bad/testfile-undef_var-3.c
#include <stdbool.h>
#include <stdlib.h>
#include <stdio.h>

int main(int x) { }
void n() { x; }
